--- a/template/page-case-seletora-mudas-flores.html
+++ b/template/page-case-seletora-mudas-flores.html
@@ -263,7 +263,7 @@
             <div class="separator-2 mb-60"></div>
             <div class="video-case">
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe src="https://player.vimeo.com/video/95206246" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QTlOkEL33dE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               </div>
             </div>
           </div>
