--- a/template/page-case-seletora-mudas-flores.html
+++ b/template/page-case-seletora-mudas-flores.html
@@ -456,6 +456,8 @@
     <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
     <!-- Pace javascript -->
     <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
+    <!-- Automatic Gallery -->
+    <script type="text/javascript" src="plugins/slick.min.js"></script>
     <!-- Initialization of Plugins -->
     <script type="text/javascript" src="js/template.js"></script>
     <!-- Google Maps javascript -->
