--- a/template/page-media.html
+++ b/template/page-media.html
@@ -697,8 +697,8 @@
       </section>
       <!-- main-container end -->
 
-       <!-- footer start -->
-       <footer id="footer" class="clearfix dark">
+      <!-- footer start -->
+      <footer id="footer" class="clearfix dark">
         <div class="footer">
           <div class="container">
             <div class="footer-inner">
@@ -750,6 +750,8 @@
     <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
     <!-- Pace javascript -->
     <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
+    <!-- Automatic Gallery -->
+    <script type="text/javascript" src="plugins/slick.min.js"></script>
     <!-- Initialization of Plugins -->
     <script type="text/javascript" src="js/template.js"></script>
     <!-- Google Maps javascript -->
