--- a/template/index.html
+++ b/template/index.html
@@ -944,7 +944,8 @@
     <!-- Automatic Gallery -->
     <script type="text/javascript" src="plugins/slick.min.js"></script>
     <!-- Initialization of Plugins -->
-    <script type="text/javascript" src="js/template.js"></script>
+    <!--<script type="text/javascript" src="js/template.js"></script>-->
+    <script type="text/javascript" src="js/template.min.js"></script>
     <!-- Google Maps javascript -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
     <script type="text/javascript" src="js/google.map.config.js"></script>
