--- a/template/page-tech-visao-computacional.html
+++ b/template/page-tech-visao-computacional.html
@@ -22,7 +22,7 @@
     <meta name="description" content="MVISIA - Máquinas de Visão e Inteligência Artificial">
     <meta itemprop="image" content="http://www.mvisia.com/.br/images/mvisia-logo.svg">
     <meta name="keywords" content="mvisia, máquinas de visão computacional, visão computacional agroindústria, máquinas agroindústria, inteligência artificla agroindústria">
-    
+
     <meta property="og:locale" content="pt_BR" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="mvisia" />
@@ -51,25 +51,32 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Font Awesome CSS -->
-    <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Plugins -->
     <link href="plugins/rs-plugin-5/css/settings.css" rel="stylesheet">
-    <link href="plugins/rs-plugin-5/css/layers.css" rel="stylesheet">
     <link href="plugins/rs-plugin-5/css/navigation.css" rel="stylesheet">
-    <link href="css/animations.css" rel="stylesheet">
+    <!--<link href="css/animations.css" rel="stylesheet">-->
     <link href="plugins/owlcarousel2/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="plugins/hover/hover-min.css" rel="stylesheet">
 
-    <link href="css/style.css" rel="stylesheet" >
+    <!--<link href="css/style.css" rel="stylesheet" >-->
 
-    <link href="css/typography.css" rel="stylesheet" >
+    <!--<link href="css/typography.css" rel="stylesheet" >-->
 
     <!-- Color Scheme -->
-    <link href="css/skins/green.css" rel="stylesheet">
+    <!--<link href="css/skins/green.css" rel="stylesheet">-->
   
     <!-- Custom css --> 
-    <link href="css/custom.css" rel="stylesheet">
+    <!--<link href="css/custom.css" rel="stylesheet">-->
+
+    <!-- min css -->
+    <link href="plugins/rs-plugin-5/css/settings.css" rel="stylesheet">
+    <link href="css/animations.min.css" rel="stylesheet"> <!-- ok -->
+    <link href="css/style.min.css" rel="stylesheet" > <!-- ok -->
+    <link href="css/typography.min.css" rel="stylesheet" > <!-- ok -->
+    <link href="css/skins/green.min.css" rel="stylesheet"> <!-- ok -->
+    <link href="css/custom.min.css" rel="stylesheet"> <!-- ok -->
+
        
   </head>
 
@@ -189,9 +196,9 @@
                           <a class="section-btn nav-link" href="page-media.html" target="_self" aria-haspopup="true" aria-expanded="false">Na mídia</a>
                         </li>
                         <!-- blog -->
-                        <!--<li class="nav-item">
-                            <a href="" target="_blank" class="nav-link" aria-haspopup="true" aria-expanded="false">Blog</a>
-                        </li>-->
+                        <li class="nav-item">
+                            <a href="http://blog.mvisia.com.br" target="_blank" class="nav-link" aria-haspopup="true" aria-expanded="false">Blog</a>
+                        </li>
                       </ul>
                     </div>
                   </nav>
@@ -290,66 +297,64 @@
     </div>
     <!-- page-wrapper end -->
 
-      <!-- footer start -->
-      <footer id="footer" class="clearfix dark">
-        <div class="footer">
-          <div class="container">
-            <div class="footer-inner">
-              <div class="row justify-content-lg-center">
-                <div class="col-lg-9">
-                  <div class="footer-content text-center padding-ver-clear">
-                    <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="images/mvisia-white-logo.svg" alt=""></div>
-                    <p>Máquinas de Visão e Inteligência Artificial</p>
-                    <ul class="list-inline mb-20">
-                      <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
-                      <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
-                      <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
-                      <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
-                    </ul>
-                    <ul class="social-links circle animated-effect-1 margin-clear">
-                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/company/mvisia/"><i class="fa fa-linkedin"></i></a></li>
-                      <li class="youtube"><a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><i class="fa fa-youtube-play"></i></a></li>
-                      <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
-                    </ul>
-                    <div class="separator"></div>
-                    <p class="text-center margin-clear">©2018 MVISIA. Todos os direitos reservados.</p>
-                  </div>
-                </div>
+   <!-- footer start -->
+   <footer id="footer" class="clearfix dark">
+    <div class="footer">
+      <div class="container">
+        <div class="footer-inner">
+          <div class="row justify-content-lg-center">
+            <div class="col-lg-9">
+              <div class="footer-content text-center padding-ver-clear">
+                <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="images/mvisia-white-logo.svg" alt=""></div>
+                <p>Máquinas de Visão e Inteligência Artificial</p>
+                <ul class="list-inline mb-20">
+                  <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
+                  <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
+                  <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
+                  <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
+                </ul>
+                <ul class="social-links circle animated-effect-1 margin-clear">
+                  <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/company/mvisia/"><i class="fa fa-linkedin"></i></a></li>
+                  <li class="youtube"><a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><i class="fa fa-youtube-play"></i></a></li>
+                  <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
+                </ul>
+                <div class="separator"></div>
+                <p class="text-center margin-clear">©2018 MVISIA. Todos os direitos reservados.</p>
               </div>
             </div>
           </div>
         </div>
-      </footer>
-      <!-- footer end -->
+      </div>
     </div>
-    <!-- page-wrapper end -->
+  </footer>
+  <!-- footer end -->
+</div>
+<!-- page-wrapper end -->
 
-    <!-- jquery and bootstap core js files -->
-    <script type="text/javascript" src="plugins/jquery.min.js"></script>
-    <script type="text/javascript" src="plugins/popper.min.js"></script>
-    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-    <!-- Modernizr javascript -->
-    <script type="text/javascript" src="plugins/modernizr.js"></script>
-    <!-- jQuery Revolution Slider  -->
-    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
-    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
-    <!-- Isotope javascript -->
-    <script type="text/javascript" src="plugins/isotope/imagesloaded.pkgd.min.js"></script>
-    <script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
-    <!-- Appear javascript -->
-    <script type="text/javascript" src="plugins/waypoints/jquery.waypoints.min.js"></script>
-    <script type="text/javascript" src="plugins/waypoints/sticky.min.js"></script>
-    <!-- Owl carousel javascript -->
-    <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
-    <!-- Pace javascript -->
-    <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
-    <!-- Automatic Gallery -->
-    <script type="text/javascript" src="plugins/slick.min.js"></script>
-    <!-- Initialization of Plugins -->
-    <script type="text/javascript" src="js/template.js"></script>
-    <!-- Google Maps javascript -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
-    <script type="text/javascript" src="js/google.map.config.js"></script>
+<!-- jquery and bootstap core js files -->
+<script type="text/javascript" src="plugins/jquery.min.js"></script>
+<script type="text/javascript" src="plugins/popper.min.js"></script>
+<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+<!-- Modernizr javascript -->
+<script type="text/javascript" src="plugins/modernizr.js"></script>
+<!-- jQuery Revolution Slider  -->
+<script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
+<script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
+<!-- Appear javascript -->
+<script type="text/javascript" src="plugins/waypoints/jquery.waypoints.min.js"></script>
+<script type="text/javascript" src="plugins/waypoints/sticky.min.js"></script>
+<!-- Owl carousel javascript -->
+<script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
+<!-- Pace javascript -->
+<script type="text/javascript" src="plugins/pace/pace.min.js"></script>
+<!-- Automatic Gallery -->
+<script type="text/javascript" src="plugins/slick.min.js"></script>
+<!-- Initialization of Plugins -->
+<!--<script type="text/javascript" src="js/template.js"></script>-->
+<script type="text/javascript" src="js/template.min.js"></script>
+<!-- Google Maps javascript -->
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
+<script type="text/javascript" src="js/google.map.config.js"></script>
 
-  </body>
+</body>
 </html>
